# MediationLayerStudent

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  dijkstra.cc  dijkstra.h  directed_edge.cc  directed_edge.h  graph.cc  graph.h  main.cc  node.cc  node.h  undirected_edge.cc  undirected_edge.h
data/: arena.map  grid_large  grid_medium
data/grids/: grid_small
data/labs/: map2d_empty  map2d_full
data/maps/: arena.map  map1
doc/: final-project-instructions.md  final-project-rules.md  final-project-setup.md  mediation_layer.md  polynomial_fitting.md  tournament-structure.md
doc/labs/: Lab4.md
examples/: CMakeLists.txt  file_example.cc  main.cc  map2sfc.cc  map2sfc_example.cc  map_example.cc  mediation_layer_example.cc  ros2d_example.cc  sfc2d_example.cc
labs/: CMakeLists.txt  a_star2d.cc  a_star2d.h  dijkstra2d.cc  dijkstra2d.h  dijkstra_student.cc  examples.cc  lab4.cc  path_info.h
labs/doc/: Lab4.md
labs/lab4/: README.md
labs/lab4/src/: CMakeLists.txt  a_star2d.cc  a_star2d.h  depth_first_search2d.cc  depth_first_search2d.h  dijkstra2d.cc  dijkstra2d.h  examples.cc  full_stack_planning.cc  gui2d.cc  gui2d.h  main.cc  path_info.h  path_planning.cc  polynomial_planning.cc
labs/src/: depth_first_search2d.cc  depth_first_search2d.h
resources/maps/: arena1.map  arena2.map  arena3.map  pretournament.map  tournament.map
resources/meshes/: quad.stl
resources/template/: obstacle.template  obstacle.yaml  obstacle0.table  obstacle0.yaml  obstacle1.table  obstacle1.yaml  obstacle10.table  obstacle10.yaml  obstacle2.table  obstacle2.yaml  obstacle3.table  obstacle3.yaml  obstacle4.table  obstacle4.yaml  obstacle5.table  obstacle5.yaml  obstacle6.table  obstacle6.yaml  obstacle7.table  obstacle7.yaml  obstacle8.table  obstacle8.yaml  obstacle9.table  obstacle9.yaml  replace.bash  replace.table
run/: ap.bash  config.rviz  ml.bash  params.yaml  run.bash
src/: CMakeLists.txt  a_star.cc  a_star.h  dijkstra.cc  dijkstra.h  directed_edge.cc  directed_edge.h  gnu_visualizer.cc  gnu_visualizer.h  graph.cc  graph.h  main.cc  node.cc  node.h  occupancy_grid.cc  occupancy_grid.h  undirected_edge.cc  undirected_edge.h
src/algorithm/: a_star.cc  a_star.h  a_star2d.h  a_star3d.h  dijkstra.cc  dijkstra.h  safe_flight_corridor2d.cc  safe_flight_corridor2d.h
src/automation_protocol/: CMakeLists.txt  ap_test.h  automation_protocol.h  game_snapshot.h  test_AP.h
src/autonomy_protocol/: CMakeLists.txt  ap_test.h  autonomy_protocol.h  example_autonomy_protocol.cc  example_autonomy_protocol.h  game_snapshot.cc  game_snapshot.h  student_autonomy_protocol.cc  student_autonomy_protocol.h
src/constraint/: linear_constraint2d.h
src/environment/: CMakeLists.txt  map2d.cc  map2d.h  map3d.cc  map3d.h  occupancy_grid2d.cc  occupancy_grid2d.h  occupancy_grid3d.h
src/exe/: CMakeLists.txt  ap_blue.cc  ap_test.cc  blue_autonomy_protocol.cc  example_autonomy_protocol.cc  main.cc  mediation_layer.cc  mock_state_reporter.cc  physics_simulator.cc  student_autonomy_protocol.cc
src/geometry/: CMakeLists.txt  line2d.cc  line2d.h  line3d.cc  line3d.h  linear_constraint2d.h  plane3d.cc  plane3d.h  point2d.h  point3d.h  polygon.cc  polygon.h  polyhedron.cc  polyhedron.h
src/graph/: CMakeLists.txt  directed_edge.h  graph.cc  graph.h  node.h  node2d.h  node3d.h  node_eigen.h
src/gui/: gnu_visualizer.cc  gnu_visualizer.h  gui2d.cc  gui2d.h  point2d_potential_view.h  potential2d_view.h  trajectory2d_view.h
src/integration/: CMakeLists.txt  runge_kutta_4.h  time_span.h
src/lib/: CMakeLists.txt
src/lib/yaml-cpp/: CMakeLists.txt
src/mediation_layer/: CMakeLists.txt  balloon_status.h  balloon_watchdog.cc  balloon_watchdog.h  line2d_force.h  mediation_layer.cc  mediation_layer.h  mediation_layer2d.cc  mediation_layer2d.h  physics_simulator.cc  physics_simulator.h  pvay2d.h  quad_state.cc  quad_state.h  quad_state_dispatcher.cc  quad_state_dispatcher.h  quad_state_guard.cc  quad_state_guard.h  quad_state_warden.cc  quad_state_warden.h  quad_state_watchdog.cc  quad_state_watchdog.h  quad_state_watchdog_status.cc  quad_state_watchdog_status.h  state2d.h  state_warden.h  time_stamped_pvay2d.h  trajectory.cc  trajectory.h  trajectory2d.h  trajectory_dispatcher.cc  trajectory_dispatcher.h  trajectory_vetter.cc  trajectory_vetter.h  trajectory_warden.cc  trajectory_warden.h  unit_state.h  vec2d.h
src/mediation_layer/potential/: line2d_potential.h  plane3d_potential.h  point2d_potential.h  point3d_potential.h  polygon_potential.h  potential.h  potential2d.h  potential3d.h
src/ros/: CMakeLists.txt  line2d_potential_view.h  marker_publisher_node.cc  marker_publisher_node.h  point2d_potential_view.h  polygon_potential_view.h  polygon_publisher_node.cc  polygon_publisher_node.h  potential2d_view.h  potential_view.h  publisher_guard.h  state2d_dispatcher.h  tmp.cc  trajectory2d_view.h
src/ros/node/: CMakeLists.txt  balloon_status_publisher_node.cc  balloon_status_publisher_node.h  balloon_status_subscriber_node.cc  balloon_status_subscriber_node.h  marker_publisher_node.cc  marker_publisher_node.h  publisher_guard.h  quad_state_publisher_node.cc  quad_state_publisher_node.h  quad_state_subscriber_node.cc  quad_state_subscriber_node.h  state2d_dispatcher.h  state_subscriber_node.h  trajectory_publisher_node.cc  trajectory_publisher_node.h  trajectory_subscriber_node.cc  trajectory_subscriber_node.h
src/ros/view/: CMakeLists.txt  balloon_view.cc  balloon_view.h  marker_view.h  plane3d_potential_view.h  plane3d_view.cc  plane3d_view.h  polyhedron_view.cc  polyhedron_view.h  quad_view.cc  quad_view.h  view_manager.cc  view_manager.h
src/threading/: CMakeLists.txt  thread.h
src/util/: CMakeLists.txt  timer.cc  timer.h  types.h
test/: CMakeLists.txt  environment_tests.cc  geometry_tests.cc  graph_tests.cc  integration_tests.cc  main.cc  mediation_layer_tests.cc  path_planning_tests.cc
